# VolumeRender

RenderEngine/: .cproject  .project
RenderEngine/src/: CMakeLists.txt  Main.cpp  Mat2D.h  Mat3D.h
RenderEngine/src/math/: vec3.cpp  vec3.h
RenderEngine/src/render/: Shader.cpp  Shader.h  WinRender.h
RenderEngine/src/support/: Profiler.h
VisualSomething/: VisualSomething.sln  VisualSomething.vcxproj  VisualSomething.vcxproj.filters  Voxel.h  fragment.frag  glad.c  main.cpp
VisualSomething/libraries/includes/glad/: glad.h
VisualSomething/math/: vec4.cpp  vec4.h
VisualSomething/render/: WinRender.cpp
VisualSomething/support/: tests_generate_functions.cpp  tests_generate_functions.h
VisualSomething/x64/Debug/: VisualSomething.exe.recipe  VisualSomething.ilk  VisualSomething.vcxproj.FileListAbsolute.txt  vc142.idb
VisualSomething/x64/Debug/VisualSomething.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VisualSomething.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
